--- a/requirements.txt
+++ b/requirements.txt
@@ -64,7 +64,7 @@ contourpy==1.3.2
 cramjam==2.10.0
 cryptography==43.0.3
 cuda-python==12.6.2.post1
-cudf-cu12 @ https://pypi.nvidia.com/cudf-cu12/cudf_cu12-25.2.1-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
+cudf-cu12
 cudf-polars-cu12==25.2.2
 cufflinks==0.17.3
 cuml-cu12==25.2.1
@@ -434,7 +434,7 @@ pygit2==1.18.0
 Pygments==2.19.2
 PyGObject==3.42.0
 PyJWT==2.10.1
-pylibcudf-cu12 @ https://pypi.nvidia.com/pylibcudf-cu12/pylibcudf_cu12-25.2.1-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
+pylibcudf-cu12
 pylibcugraph-cu12==25.2.0
 pylibraft-cu12==25.2.0
 pymc==5.23.0
